<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 CMPUT301W18T18
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editProfileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                tools:text="User Name" />

            <TextView
                android:id="@+id/editProfileContactHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_contact_header"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#A5000000"/>

            <FrameLayout
                android:id="@+id/editProfileContactDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1E000000"
                app:layout_constraintTop_toBottomOf="@id/editProfileContactHeader" />

            <!-- TODO this would probably look good with icons in the left margin -->

            <TextView
                android:id="@+id/editProfileEmailLabel"
                android:labelFor="@id/editProfileEmailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_email_label"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                app:layout_constraintBottom_toTopOf="@id/editProfileEmailField" />

            <EditText
                android:id="@+id/editProfileEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/editProfileContactDivider"
                android:layout_marginStart="24dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/editProfilePhoneLabel"
                android:labelFor="@id/editProfilePhoneField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_phone_label"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <EditText
                android:id="@+id/editProfilePhoneField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@id/editProfilePhoneField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"  />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>